--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push --force https://SaniyaBubere:$HF_TOKEN@huggingface.co/spaces/SaniyaBubere/Books-Recommendation main
+        run: git push https://SaniyaBubere:$HF_TOKEN@huggingface.co/spaces/SaniyaBubere/Books-Recommendation main
